# building_cpp_module_to_python

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README  README.md  build.sh  config.sh  install.sh  main.cpp  notes  run.sh  setup.py
calc/: CMakeLists.txt  calc.cpp  calc.h  calculadora.cpp  calculadora.h
doc/: config.py
